--- a/package.json
+++ b/package.json
@@ -27,5 +27,19 @@
     "jest": "^27.0.5",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.1"
+  },
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "celebrate": "^15.0.0",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "express-winston": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.7",
+    "validator": "^13.6.0",
+    "winston": "^3.3.3"
   }
 }
